fix spacing

--- a/css/about.css
+++ b/css/about.css
@@ -217,8 +217,13 @@ header .uvp #uvp-cta a button {
     display: block;
     width: 100%;
     background-color: #F7FAFA;
-    padding: 2rem;
+    padding-bottom: 2rem;
+    padding-top: 2rem;
     text-align: center;
+    box-shadow: 0 4px 0 0 rgba(34, 38, 42, 0.2);
+  }
+  header nav #mobile li {
+    padding-bottom: 3rem;
   }
   header .uvp {
     width: 350px;
@@ -353,7 +358,7 @@ main #second-cta h1 {
     margin-top: 2rem;
   }
   main #second-cta {
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
   }
   main #second-cta h1 {
