--- a/less/index.less
+++ b/less/index.less
@@ -249,8 +249,13 @@ header {
                 display: block;
                 width: 100%;
                 background-color: @background-color1;
-                padding: 2rem;
+                padding-bottom: 2rem;
+                padding-top: 2rem;
                 text-align: center;
+                box-shadow: @shadow;
+                li {
+                    padding-bottom: 3rem;
+                }
             }
         }
         .uvp {
@@ -409,7 +414,7 @@ main {
             }
         }
         #second-cta {
-            width: 80%;
+            width: 100%;
             margin: 0 auto;
             h1 {
                 padding: 0;
