--- a/less/variables.less
+++ b/less/variables.less
@@ -11,4 +11,4 @@
 @label-color: #565A62;
 @font-body: "Inter", sans-serif;
 @font-special: "Francois One", sans-serif;
-@shadow: 0 4px 6px 0 rgba(34, 38, 42, 0.2);
+@shadow: 0 4px 0 0 rgba(34, 38, 42, 0.2);
